[package]
name = "prime_factor_guesser"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = { version = "0.17.8", features = ["rayon"] }
log = "0.4"
env_logger = "0.10"
rayon = "1.7"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
